@@ -109,6 +109,7 @@
 		lv2:index 9 ;
 		lv2:symbol "GEN1_NH1" ;
 		lv2:name "GEN1 Nh 1" ;
+		lv2:portProperty lv2:integer ;
 		lv2:default 32.0 ;
 		lv2:minimum 2.0 ;
 		lv2:maximum 64.0 ;
@@ -179,6 +180,7 @@
 		lv2:index 16 ;
 		lv2:symbol "GEN1_NH2" ;
 		lv2:name "GEN1 Nh 2" ;
+		lv2:portProperty lv2:integer ;
 		lv2:default 32.0 ;
 		lv2:minimum 2.0 ;
 		lv2:maximum 64.0 ;
