@@ -4,6 +4,11 @@ padthv1 - An old-school additive polyphonic synthesizer
 ChangeLog
 
 
+GIT HEAD
+
+- NSM: prevent loading any preset(s) given on command line.
+
+
 1.1.0  2024-08-28  A Mid-Summer'24 Release.
 
 - Smooth and seamless voice/note deferred switching, whenever any
